--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         doloremque dolorem, alias saepe dolorum ipsum architecto porro nobis
         libero commodi!
       </p>
-
-      <div class="overlay hidden`"></div>
     </div>
+    <div class="overlay hidden"></div>
+    <script src="./main.js"></script>
   </body>
 </html>
